// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fonts Render Font Colors 1`] = `
.c1 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
}

.c0 {
  color: #f5f6fa;
  font-family: Courier;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
}

<div>
  <div
    class="c0"
  >
    White Font Color
  </div>
  <div
    class="c1"
  >
    Black Font Color
  </div>
</div>
`;

exports[`Fonts Renders Body Fonts 1`] = `
.c0 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
}

.c1 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 14px;
  line-height: 18px;
}

.c2 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
}

<div>
  <div
    class="c0"
  >
    Body 1
  </div>
  <div
    class="c1"
  >
    Body 2
  </div>
  <div
    class="c2"
  >
    Body 3
  </div>
</div>
`;

exports[`Fonts Renders Display Fonts 1`] = `
.c0 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 72px;
  line-height: 80px;
}

.c1 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 48px;
  line-height: 54px;
}

.c2 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 40px;
  line-height: 46px;
}

<div>
  <div
    class="c0"
  >
    Display 1
  </div>
  <div
    class="c1"
  >
    Display 2
  </div>
  <div
    class="c2"
  >
    Display 3
  </div>
</div>
`;

exports[`Fonts Renders Font Boldnesses 1`] = `
.c0 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 300;
  font-size: 16px;
  line-height: 20px;
}

.c1 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
}

.c2 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
}

<div>
  <div
    boldness="1"
    class="c0"
  >
    Light Boldness
  </div>
  <div
    boldness="2"
    class="c1"
  >
    Medium Boldness
  </div>
  <div
    boldness="3"
    class="c2"
  >
    Bold Boldness
  </div>
</div>
`;

exports[`Fonts Renders Heading Fonts 1`] = `
.c0 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 28px;
  line-height: 34px;
}

.c1 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 24px;
  line-height: 30px;
}

.c2 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 20px;
  line-height: 30px;
}

<div>
  <div
    class="c0"
  >
    H 1
  </div>
  <div
    class="c1"
  >
    H 2
  </div>
  <div
    class="c2"
  >
    H 3
  </div>
</div>
`;

exports[`Fonts Renders Label Fonts 1`] = `
.c0 {
  color: #3d4856;
  font-family: Courier;
  font-weight: 500;
  font-size: 11px;
  line-height: 14px;
}

<div>
  <div
    class="c0"
  >
    Label
  </div>
</div>
`;
